# react-vite-fastapi-inmeta

./: README.md  azure-pipelines.yml  react-vite-fastapi-inmeta.code-workspace
.github/workflows/: build-and-deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
frontend/: .gitignore  Dockerfile  package.json  vite.config.ts
frontend/src/: vite-env.d.ts
frontend/src/http-client/: api-config.ts
frontend/src/routes/: __root.tsx  index.tsx
