[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Devlin Duldulao <webmasterdevlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pydantic-extra-types = "^2.6.0"
codegen = "^1.0"
tenacity = "^8.2.3"
python-multipart = "^0.0.9"
psycopg = "^3.1.18"
httpx = "^0.27.0"
cachetools = "^5.3.3"
ruff = "^0.3.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
